Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -1,98 +1,124 @@
 <!DOCTYPE html>
 <html>
+
   <head>
-    <meta charset='utf-8'>
-    <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <meta name="viewport" content="width=640" />
+    <meta charset='utf-8' />
+    <meta http-equiv="X-UA-Compatible" content="chrome=1" />
+    <meta name="description" content="Resume : " />
 
-    <link rel="stylesheet" href="stylesheets/core.css" media="screen"/>
-    <link rel="stylesheet" href="stylesheets/mobile.css" media="handheld, only screen and (max-device-width:640px)"/>
-    <link rel="stylesheet" href="stylesheets/pygment_trac.css"/>
+    <link rel="stylesheet" type="text/css" media="screen" href="stylesheets/stylesheet.css">
 
-    <script type="text/javascript" src="javascripts/modernizr.js"></script>
-    <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
-    <script type="text/javascript" src="javascripts/headsmart.min.js"></script>
-    <script type="text/javascript">
-      $(document).ready(function () {
-        $('#main_content').headsmart()
-      })
-    </script>
-    <title>Resume by kevincol54</title>
+    <title>Resume</title>
   </head>
 
   <body>
-    <a id="forkme_banner" href="https://github.com/kevincol54/Resume">View on GitHub</a>
-    <div class="shell">
 
-      <header>
-        <span class="ribbon-outer">
-          <span class="ribbon-inner">
-            <h1>Resume</h1>
-            <h2></h2>
-          </span>
-          <span class="left-tail"></span>
-          <span class="right-tail"></span>
-        </span>
-      </header>
+    <!-- HEADER -->
+    <div id="header_wrap" class="outer">
+        <header class="inner">
+          <a id="forkme_banner" href="https://github.com/kevincol54/Resume">View on GitHub</a>
 
-      <section id="downloads">
-        <span class="inner">
-          <a href="https://github.com/kevincol54/Resume/zipball/master" class="zip"><em>download</em> .ZIP</a><a href="https://github.com/kevincol54/Resume/tarball/master" class="tgz"><em>download</em> .TGZ</a>
-        </span>
+          <h1 id="project_title">Resume</h1>
+          <h2 id="project_tagline"></h2>
+
+            <section id="downloads">
+              <a class="zip_download_link" href="https://github.com/kevincol54/Resume/zipball/master">Download this project as a .zip file</a>
+              <a class="tar_download_link" href="https://github.com/kevincol54/Resume/tarball/master">Download this project as a tar.gz file</a>
+            </section>
+        </header>
+    </div>
+
+    <!-- MAIN CONTENT -->
+    <div id="main_content_wrap" class="outer">
+      <section id="main_content" class="inner">
+        <h1>
+<a name="kevin-collins" class="anchor" href="#kevin-collins"><span class="octicon octicon-link"></span></a>Kevin Collins</h1>
+
+<h2>
+<a name="full-stack-web-developer" class="anchor" href="#full-stack-web-developer"><span class="octicon octicon-link"></span></a>Full-Stack Web Developer</h2>
+
+<h3>
+<a name="803-468-2388" class="anchor" href="#803-468-2388"><span class="octicon octicon-link"></span></a>803-468-2388</h3>
+
+<h3>
+<a name="github" class="anchor" href="#github"><span class="octicon octicon-link"></span></a><a href="http://github.com/kevincol54">GitHub</a>
+</h3>
+
+<h3>
+<a name="portfolio" class="anchor" href="#portfolio"><span class="octicon octicon-link"></span></a><a href="http://kevincol54.github.io">Portfolio</a>
+</h3>
+
+<h3>
+<a name="kevincol54gmailcom" class="anchor" href="#kevincol54gmailcom"><span class="octicon octicon-link"></span></a><a href="mailto:kevincol54@gmail.com">kevincol54@gmail.com</a>
+</h3>
+
+<hr><h2>
+<a name="skills" class="anchor" href="#skills"><span class="octicon octicon-link"></span></a>Skills:</h2>
+
+<ul>
+<li>Ruby / Ruby on Rails</li>
+<li>AngularJS</li>
+<li>JSON</li>
+<li>JavaScript / CoffeeScript</li>
+<li>UnderscoreJS</li>
+<li>RSpec</li>
+<li>jQuery</li>
+<li>HTML / HAML</li>
+<li>Mac OS</li>
+<li>CSS</li>
+<li>Git Source Control / GitHub</li>
+<li>SEO</li>
+<li>Adobe Photoshop / Dreamweaver / Fireworks / Illustrator / InDesign</li>
+</ul><hr><h2>
+<a name="previous-work-experience" class="anchor" href="#previous-work-experience"><span class="octicon octicon-link"></span></a>Previous Work Experience</h2>
+
+<p>Before becoming a full-stack web developer, I worked for several companies in tech, IT and management roles. My different roles have provided me the experience of collaborating with teams that require strong communication skills, an eye for detail and truly learning the importance of hard work and having a passion for solving problems. </p>
+
+<p><strong>Project Team Specialist</strong><br><strong>Best Buy Corporate</strong><br><em>February 2011 - March 2014</em><br>
+I started with Best Buy in 2011 as a Sales Support associate until being promoted several times and finally reaching the corporate level. During my time there, I had a variety of responsibilities:</p>
+
+<ul>
+<li>Implemented new interactive network displays and new vendor displays throughout stores across the United States.</li>
+<li>Executed the installation of all IT related equipment and cabling for approximately 75+ store remodels, 50+ transformations and 5+ new store openings.</li>
+<li>Managed and motivated teams in the merchandising of stores during transformations.</li>
+<li>Solved complex IT problems while working on diverse teams.</li>
+<li>Introduced new technologies and methods to help solve seemingly insurmountable problems that arose out of state when the right tools were not available.</li>
+</ul><p><strong>Web Sales Manager &amp; Webmaster</strong><br><strong>Barston’s Child’s Play</strong><br><em>November 2009 - December 2010</em><br>
+My Tenure at Barston's started with warehouse work and eventually transitioned into a role that utilized my abilities and passions:</p>
+
+<ul>
+<li>Responsible for the online web store’s general maintenance and front end development.</li>
+<li>Monitored and oversaw all web sales (receiving orders, processing orders, picking of orders from warehouse and shipping of all orders).</li>
+<li>Performed graphics work on the site's front end, while maintaining an up-to-date online catalog of 2,500+ available products.</li>
+<li>Oversaw the SEO strategies for company website.</li>
+</ul><p><strong>Tour Manager</strong><br><strong>Various Bands/Tours</strong><br><em>June 2008 - October 2009</em><br>
+I have always had a love and passion for all things music. Started working as a merchandise salesman for bands, eventually transitioning into tour management, which gave me many translatable skills:</p>
+
+<ul>
+<li>Coordinated all travel arrangements of artists to ensure they made it safely from city to city, arrived on time at venue and were prepped and ready to perform on time each night with all of their required gear.</li>
+<li>Managed teams of people on a day to day basis to build a cohesive,  smooth-running tour. </li>
+<li>Responsible for the assembly of daily schedules and the organization of day to day activities for each artist and all members traveling with artist/tour.</li>
+<li>Worked with and for a wide variety of individuals that taught me how to collaborate effectively with people with very different view points and backgrounds.</li>
+</ul><h2>
+<a name="education" class="anchor" href="#education"><span class="octicon octicon-link"></span></a>Education</h2>
+
+<p><strong>The Iron Yard Academy</strong><br><strong>Back-End Web Development</strong><br><em>March 2014 - June 2014</em></p>
+
+<p><strong>Red Rocks Community College</strong><br><strong>Computer Graphics &amp; Engineering</strong><br><em>August 2011 - May 2012</em></p>
+
+<p><strong>College Of Charleston</strong><br><strong>International Business/Trade/Commerce</strong><br><em>August 2007 - May 2008</em></p>
       </section>
+    </div>
 
-
-      <span class="banner-fix"></span>
-
-
-      <section id="main_content">
-        <h3>
-<a name="welcome-to-github-pages" class="anchor" href="#welcome-to-github-pages"><span class="octicon octicon-link"></span></a>Welcome to GitHub Pages.</h3>
-
-<p>This automatic page generator is the easiest way to create beautiful pages for all of your projects. Author your page content here using GitHub Flavored Markdown, select a template crafted by a designer, and publish. After your page is generated, you can check out the new branch:</p>
-
-<pre><code>$ cd your_repo_root/repo_name
-$ git fetch origin
-$ git checkout gh-pages
-</code></pre>
-
-<p>If you're using the GitHub for Mac, simply sync your repository and you'll see the new branch.</p>
-
-<h3>
-<a name="designer-templates" class="anchor" href="#designer-templates"><span class="octicon octicon-link"></span></a>Designer Templates</h3>
-
-<p>We've crafted some handsome templates for you to use. Go ahead and continue to layouts to browse through them. You can easily go back to edit your page before publishing. After publishing your page, you can revisit the page generator and switch to another theme. Your Page content will be preserved if it remained markdown format.</p>
-
-<h3>
-<a name="rather-drive-stick" class="anchor" href="#rather-drive-stick"><span class="octicon octicon-link"></span></a>Rather Drive Stick?</h3>
-
-<p>If you prefer to not use the automatic generator, push a branch named <code>gh-pages</code> to your repository to create a page manually. In addition to supporting regular HTML content, GitHub Pages support Jekyll, a simple, blog aware static site generator written by our own Tom Preston-Werner. Jekyll makes it easy to create site-wide headers and footers without having to copy them across every page. It also offers intelligent blog support and other advanced templating features.</p>
-
-<h3>
-<a name="authors-and-contributors" class="anchor" href="#authors-and-contributors"><span class="octicon octicon-link"></span></a>Authors and Contributors</h3>
-
-<p>You can <a href="https://github.com/blog/821" class="user-mention">@mention</a> a GitHub username to generate a link to their profile. The resulting <code>&lt;a&gt;</code> element will link to the contributor's GitHub Profile. For example: In 2007, Chris Wanstrath (<a href="https://github.com/defunkt" class="user-mention">@defunkt</a>), PJ Hyett (<a href="https://github.com/pjhyett" class="user-mention">@pjhyett</a>), and Tom Preston-Werner (<a href="https://github.com/mojombo" class="user-mention">@mojombo</a>) founded GitHub.</p>
-
-<h3>
-<a name="support-or-contact" class="anchor" href="#support-or-contact"><span class="octicon octicon-link"></span></a>Support or Contact</h3>
-
-<p>Having trouble with Pages? Check out the documentation at <a href="http://help.github.com/pages">http://help.github.com/pages</a> or contact <a href="mailto:support@github.com">support@github.com</a> and we’ll help you sort it out.</p>
-      </section>
-
-      <footer>
-        <span class="ribbon-outer">
-          <span class="ribbon-inner">
-            <p>this project by <a href="https://github.com/kevincol54">kevincol54</a> can be found on <a href="https://github.com/kevincol54/Resume">GitHub</a></p>
-          </span>
-          <span class="left-tail"></span>
-          <span class="right-tail"></span>
-        </span>
-        <p>Generated with <a href="http://pages.github.com">GitHub Pages</a> using Merlot</p>
-        <span class="octocat"></span>
+    <!-- FOOTER  -->
+    <div id="footer_wrap" class="outer">
+      <footer class="inner">
+        <p class="copyright">Resume maintained by <a href="https://github.com/kevincol54">kevincol54</a></p>
+        <p>Published with <a href="http://pages.github.com">GitHub Pages</a></p>
       </footer>
-
     </div>
 
     
+
   </body>
 </html>
